--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -41,11 +41,11 @@ jobs:
         ref: master
         sparse-checkout: |
           2-pr-backport
-        path: .github/2-pr-backport
+        path: .actions/2-pr-backport
         token: ${{steps.sudo_github_token.outputs.token}}
 
     - name: Backport
-      uses: ./actions/2-pr-backport
+      uses: ./.actions/2-pr-backport
       with:
         approval_bot_token: ${{secrets.SCALR_BUILDBOT_TOKEN}}
         token: ${{steps.sudo_github_token.outputs.token}}
