--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -42,6 +42,8 @@ jobs:
         path: .actions
         token: ${{steps.sudo_github_token.outputs.token}}
 
+    - run: ls .actions
+
     - name: Backport
       uses: ./.actions/2-pr-backport
       with:
