--- a/.github/workflows/backport.yaml
+++ b/.github/workflows/backport.yaml
@@ -39,7 +39,10 @@ jobs:
     - uses: actions/checkout@v4
       with:
         ref: master
+        sparse-checkout: |
+          2-pr-backport
         path: .actions
+        repository: Scalr/actions
         token: ${{steps.sudo_github_token.outputs.token}}
 
     - run: ls .actions
