--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           go-version: "1.23"
           cache: false
+      - uses: hashicorp/setup-terraform@v3
       - name: Lint
         uses: golangci/golangci-lint-action@v6
         with:
