SCALRCORE-33092: Automation > Automate Jira creation process for Dependabot issues

--- a/.github/workflows/dependabot-to-jira.yml
+++ b/.github/workflows/dependabot-to-jira.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 jobs:
   create_ticket:
-    runs-on: ["small-amd64-without-dind"]
+    runs-on: ubuntu-latest
     steps:
       - name: Generate GitHub Token
         id: generate_token
