SCALRCORE-35098: SRE: Fix Dependabot to Jira Automation

--- a/.github/workflows/dependabot-to-jira.yml
+++ b/.github/workflows/dependabot-to-jira.yml
@@ -27,7 +27,7 @@ jobs:
           ref: master
 
       - name: Run Dependabot Alerts Checker
-        uses: ./actions/dependabot-jira-ticket@master
+        uses: ./actions/dependabot-jira-ticket
         with:
           github_repository: ${{ github.repository }}
           github_token: ${{ steps.generate_token.outputs.token }}
