--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,3 +66,26 @@ jobs:
         uses: readmeio/rdme@v10
         with:
           rdme: docs upload ./docs --key=${{ secrets.README_API_KEY }} --branch=${{ env.RDME_VERSION }}
+
+  e2e-tests:
+    name: Trigger e2e tests
+    needs: [ release ]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sudo GitHub Token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{vars.SUDO_GHA_APP_ID}}
+          installation_id: ${{vars.SUDO_GHA_APP_INSTALLATION_ID}}
+          private_key: ${{secrets.SUDO_GHA_APP_PRIVATE_KEY}}
+      - uses: actions/github-script@v7
+        with:
+          github-token: ${{steps.generate_token.outputs.token}}
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: 'Scalr',
+              repo: 'fatmouse',
+              workflow_id: 'e2e-provider-release.yml',
+              ref: 'master',
+            })
