SCALRCORE-35593 Release Manager: Automate fixVersion closure after su… (#465)
* SCALRCORE-35593 Release Manager: Automate fixVersion closure after successful E2E tests on production (Server/Agent/Provider release)

* SCALRCORE-35593 Release Manager: Automate fixVersion closure after successful E2E tests on production (Server/Agent/Provider release)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,9 +83,15 @@ jobs:
         with:
           github-token: ${{steps.generate_token.outputs.token}}
           script: |
+            const tag = '${{ github.ref_name }}';
+            const providerVersion = `provider/${tag.replace(/^v/, '')}`;
+
             await github.rest.actions.createWorkflowDispatch({
               owner: 'Scalr',
               repo: 'fatmouse',
               workflow_id: 'e2e-provider-release.yml',
               ref: 'master',
+              inputs: {
+                version: providerVersion
+              }
             })
