--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -49,9 +49,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Notify Upstream about Pending
         run: make notify-upstream org_admin_token=${{steps.generate_token.outputs.token}} upstream_sha=${{ github.event.inputs.upstream-sha }} state=pending run_id=${{ github.run_id }}
-      - uses: actions/setup-go@v5
+      - uses: actions/setup-go@v6
         with:
-          go-version: "1.23"
+          go-version-file: '.go-version'
       - name: Clone Fatmouse Repo
         uses: actions/checkout@v4
         with:
