--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -85,7 +85,7 @@ jobs:
           no_segment: true
           agent_pool_id: ${{ !contains(steps.pr-labels.outputs.labels, ' e2e:tev2_on_server ') && vars.TACO_APOOL_ID || '' }}
           working_directory: fatmouse
-          secrets_bucket: tacobell-secrets
+          secrets_bucket: scalr-tacobell-secrets
       - name: Get Scalr Hostname
         run: |
           SCALR_HOST=${{ steps.create-preview-env.outputs.host }}
