--- a/.github/workflows/default_release.yml
+++ b/.github/workflows/default_release.yml
@@ -15,10 +15,10 @@ jobs:
           fetch-depth: 0
       - name: Import GPG key
         id: import_gpg
-        uses: Scalr/ghaction-import-gpg@v2.1.1
-        env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        uses: crazy-max/ghaction-import-gpg@v6
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
       - id: Auth
         uses: google-github-actions/auth@v2
         with:
