--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -213,6 +213,9 @@ jobs:
     name: Upload Provider to ${{ vars.DEV_DOMAIN }}
     # needs: [lint, unit-tests, acc-tests]
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
