--- a/.github/workflows/default_release.yml
+++ b/.github/workflows/default_release.yml
@@ -8,6 +8,9 @@ jobs:
     name: upload-dev
     if: startsWith(github.ref, 'refs/heads/release/')
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
