--- a/.github/actions/upload-provider/package.json
+++ b/.github/actions/upload-provider/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "author": "Artem Sukhodolskyi <a.sukhodolskyi@scalr.io>",
   "scripts": {
-    "build": "ncc build index.js -o dist"
+    "build": "ncc build index.js -o dist && cp index.html dist/index.html"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
