--- a/.github/workflows/build_provider.yml
+++ b/.github/workflows/build_provider.yml
@@ -1,12 +1,27 @@
-name: Default Release
+name: Build Development Provider
 
 on:
-  create:
+  workflow_dispatch:
+  push:
+    branches:
+      - master
+      - release/**
+    paths-ignore:
+      - CHANGELOG.md
+      - CONTRIBUTING.md
+      - README.md
+  pull_request:
+    branches:
+      - master
+      - release/**
+    paths-ignore:
+      - CHANGELOG.md
+      - CONTRIBUTING.md
+      - README.md
 
 jobs:
-  upload-dev:
-    name: upload-dev
-    if: startsWith(github.ref, 'refs/heads/release/')
+  build:
+    name: Build Provider
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -43,13 +58,13 @@ jobs:
           args: release --skip=publish
         env:
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
-      - name: Upload Provider to Registry
+      - name: Upload Provider
         uses: ./.github/actions/upload-provider
         with:
           gcs-bucket: ${{ vars.DEV_BUCKET }}
           registry-domain: ${{ vars.DEV_DOMAIN }}
           gpg-key-id: ${{ steps.import_gpg.outputs.fingerprint }}
-          gpg-pub-key: ${{ steps.import_gpg.outputs.pubkey }}
+          gpg-pub-key: ${{ secrets.GPG_PUBLIC_KEY }}
       - name: Update Network Mirror
         uses: ./.github/actions/update-network-mirror
         with:
