--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
 
   docs-publish:
     name: Publish Docs
-    needs: [ release ]
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
 
   e2e-tests:
     name: Trigger E2E Tests
-    needs: [ release ]
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - name: Sudo GitHub Token
