--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -21,6 +21,10 @@ on:
 env:
   RDME_VERSION: 0.0.5
 
+concurrency:
+  group: ${{github.head_ref || github.ref}}-${{github.workflow}}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
+
 jobs:
   lint:
     name: Lint
