--- a/.github/actions/upload-provider/action.yml
+++ b/.github/actions/upload-provider/action.yml
@@ -16,18 +16,12 @@ inputs:
   gpg-pub-key:
     description: 'GPG pub key'
     required: true
-    
+  is-development:
+    description: 'Whether this is a development registry'
+    required: false
+    default: 'false'
 
 runs:
-  # TODO: Rewrite on JS, for god's sake
-  using: composite
-  steps:
-    - name: Upload provider
-      shell: bash
-      run: 'bash ./.github/actions/upload-provider/action.sh'
-      env:
-        DOMAIN: ${{ inputs.registry-domain }}
-        BUCKET_NAME: ${{ inputs.gcs-bucket }}
-        GPG_KEY_ID: ${{ inputs.gpg-key-id }}
-        GPG_PUB_KEY: ${{ inputs.gpg-pub-key }}
+  using: 'node20'
+  main: 'dist/index.js'
         
