--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,4 +1,4 @@
-name: default
+name: Default
 
 on:
   push:
@@ -20,6 +20,10 @@ on:
 
 env:
   RDME_VERSION: 0.0.5
+
+concurrency:
+  group: ${{github.head_ref || github.ref}}-${{github.workflow}}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
   lint:
@@ -71,6 +75,7 @@ jobs:
 
   acc-tests:
     runs-on: ubuntu-latest
+    needs: [ lint ]
     name: acc-tests
     env:
       SCALR_TOKEN: ${{ secrets.SCALR_TOKEN }}
@@ -208,54 +213,3 @@ jobs:
               }
             ]
           }
-
-  upload-dev:
-    name: upload-dev
-    needs: [lint, unit-tests, acc-tests]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Import GPG key
-        id: import_gpg
-        uses: Scalr/ghaction-import-gpg@v2.1.1
-        env:
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-      - id: Auth
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.DEV_GCP_SA_KEY }}
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-      - name: Create Development Tag
-        run: |
-          BRANCH=${{ github.head_ref || github.ref_name }}
-          CLEAN_BRANCH=$(echo "$BRANCH" | sed 's/[\/]/-/g')
-          git tag v1.0.0-rc-$CLEAN_BRANCH
-      - name: Set up Go
-        uses: actions/setup-go@v6
-        with:
-          go-version-file: '.go-version'
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v6
-        with:
-          version: "~> v2"
-          args: release --skip=publish
-        env:
-          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
-      - name: Upload Provider to Registry
-        uses: ./.github/actions/upload-provider
-        with:
-          gcs-bucket: ${{ secrets.DEV_BUCKET_NAME }}
-          registry-domain: ${{ secrets.DEV_DOMAIN }}
-          gpg-key-id: ${{ steps.import_gpg.outputs.fingerprint }}
-          gpg-pub-key: ${{ steps.import_gpg.outputs.pubkey }}
-      - name: Update Network Mirror
-        uses: ./.github/actions/update-network-mirror
-        with:
-          gcs-bucket: ${{ secrets.DEV_BUCKET_NAME }}
-          registry-domain: ${{ secrets.DEV_DOMAIN }}
-          dry-run: false
